# CrossSpeciesComparisonPhyTVuPlugin

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build.yml
res/: CrossSpeciesComparisonPhyTVu_chart.qrc  CrossSpeciesComparisonPhyloTreeView_chart.qrc  XSCPhyTVu_chart.qrc
res/CrossSpeciesComparisonPhyTVu_chart/: ChartFile.js  CrossSpeciesComparisonPhyTVu_chart.html  CrossSpeciesComparisonPhyTVu_chart.js
res/CrossSpeciesComparisonPhyloTreeView_chart/: ChartFile.js  CrossSpeciesComparisonPhyloTreeView_chart.css  CrossSpeciesComparisonPhyloTreeView_chart.html  CrossSpeciesComparisonPhyloTreeView_chart.js  FunctionFile.js
res/XSCPhyTVu_chart/: DataFile.js  FunctionFile.js  XSCPhyTVu_chart.css  XSCPhyTVu_chart.html  XSCPhyTVu_chart.js  dataFile.json  index.js
res/js_libs/: d3.v5.js  qwebchannel.tools.js
src/: ChartOptions.cpp  ChartOptions.h  ChartWidget.cpp  ChartWidget.h  CrossSpeciesComparisonPhyTVuPlugin.cpp  CrossSpeciesComparisonPhyTVuPlugin.h  CrossSpeciesComparisonPhyTVuPlugin.json  CrossSpeciesComparisonPhyloTreeViewPlugin.cpp  CrossSpeciesComparisonPhyloTreeViewPlugin.h  CrossSpeciesComparisonPhyloTreeViewPlugin.json  ReembedOptions.cpp  ReembedOptions.h  XSCPhyTVuPlugin.cpp  XSCPhyTVuPlugin.h  XSCPhyTVuPlugin.json
